# r-helper

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs  razer-gui.rc  rustfmt.toml
librazer/: Cargo.toml
librazer/src/: command.rs  descriptor.rs  device.rs  feature.rs  packet.rs
src/: main.rs  messaging.rs  utils.rs
src/app/: battery.rs  fan.rs  init.rs  lighting.rs  mod.rs  perf_ui.rs  performance.rs  state.rs
src/device/: controls.rs  mod.rs  status.rs
src/power/: mod.rs  profiles.rs
src/system/: mod.rs  specs.rs
src/ui/: battery.rs  fan.rs  footer.rs  header.rs  lighting.rs  mod.rs  performance.rs
