[package]
name = "razer-gui"
version = "0.3.2"
edition = "2021"
description = "R-Helper - Razer Blade control interface"
authors = ["Fatalution"]

[[bin]]
name = "rhelper"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
anyhow = "1.0.80"
librazer = { path = "./librazer" }
image = "0.24"
strum = { version = "0.26.1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = [
    "Win32_System_Power",
    "Win32_UI_Shell"
] }

[build-dependencies]
embed-resource = "2.4"
