[package]
name = "librazer"
version = "0.8.5"
edition = "2021"
license = "MIT"
description = "Librazer fork adapted from blauzim/razer-ctl"
readme = "../README.md"

[dependencies]
anyhow = "1.0.89"
bincode = "2.0.1"
clap = { version = "4.5.18", features = ["derive"] }
const-str = "0.7.0"
const_format = "0.2.33"
hidapi = {version = "2.6.3", features = ["windows-native"]}
rand = "0.9.2"
serde = { version = "1.0.210", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.132"
strum = "0.27.2"
strum_macros = "0.27.2"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55.0", features = ["transactions"] }
